# compiler

./: .python-version  README.md  a.fei  app.py  cli.py  constants.py  fei  grammar.txt  lexical.py  program.fei  program.fei.py  program.txt  pyproject.toml  run.py  s  syntatic.py  utils.py
models/: LexicalAnalysis.py  Node.py  SemanticAnalysis.py  Symbol.py  SymbolTable.py  SyntaticAnalysis.py  Tree.py  __init__.py  afd.py  token.py
